[project]
name = "array-api-stubs"
version = "0.0.2"
description = "Stubs for the array API standard"
authors = []
license = {file = "LICENSE"}
readme = "PACKAGE.md"
requires-python = ">=3.8"
keywords = []
classifiers = []

[project.urls]
Source = "https://github.com/data-apis/array-api/"
Documentation = "https://data-apis.org/array-api/"
Homepage = "https://data-apis.org/"

[project.optional-dependencies]
doc = [
    "sphinx==4.3.0",
    "sphinx-material==0.0.30",
    "myst-parser",
    "sphinx_markdown_tables",
    "sphinx_copybutton",
    "docutils<0.18",
    "sphinx-math-dollar",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
