[project]
name = "array-api-stubs"
version = "0.0.2"
description = "Stubs for the array API standard"
authors = []
license = {file = "LICENSE"}
readme = "PACKAGE.md"
requires-python = ">=3.8"
keywords = []
classifiers = []

[project.urls]
Source = "https://github.com/data-apis/array-api/"
Documentation = "https://data-apis.org/array-api/"
Homepage = "https://data-apis.org/"

[project.optional-dependencies]
doc = [
    "sphinx==4.3.0",
    "sphinx-material==0.0.30",
    "myst-parser",
    "sphinx_markdown_tables",
    "sphinx_copybutton",
    "docutils<0.18",
    "sphinx-math-dollar",
    "sphinx-favicon",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 88


[tool.mypy]
python_version = "3.9"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src/array_api_stubs/_draft/"
files = [
    "src/array_api_stubs/_draft/**/*.py"
]
follow_imports = "silent"
